--- a/app/styles/components/_title.scss
+++ b/app/styles/components/_title.scss
@@ -1,6 +1,6 @@
 .title-box {
-  border: 1px solid black;
-  background: #fafafa;
+  border: $border;
+  background: $background-grey;
   margin-top: 2rem;
   color: #aaa;
   border-bottom: none;
