--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,5 +1,19 @@
 //Colors
 $grey: #333333;
+$background-grey: #fafafa;
+$border: none;//1px solid black;
 $living-color: lightgreen;
 $long-living-color: green;
 $dead-color: lighten(lightblue, 15%);
+
+//Button Colors
+$btn-text: #fff;
+$transparency: 0.35;
+$btn-start-bg: transparentize(#337ab7, $transparency);
+$btn-start-border: darken($btn-start-bg, 5%);
+$btn-once-bg: transparentize(#5bc0de, $transparency);
+$btn-once-border: darken($btn-once-bg, 5%);
+$btn-stop-bg: transparentize(#d9534f, $transparency);
+$btn-stop-border: darken($btn-stop-bg, 5%);
+$btn-clear-bg: transparentize(#f0ad4e, $transparency);
+$btn-clear-border: darken($btn-clear-bg, 5%);
