--- a/app/styles/components/_grid.scss
+++ b/app/styles/components/_grid.scss
@@ -1,7 +1,8 @@
 .board {
   width: 100%;
   height: 50vh;
-  border: 1px solid black;
+  border: $border;
+  background: $background-grey;
 }
 .board-row {
   float: none;
@@ -9,7 +10,7 @@
 }
 
 .square {
-  border: 1px solid grey;
+  border: 1px solid $background-grey;
   height: 15px;
   width: 15px;
   margin: -1px;
