--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 //Colors
 $grey: #333333;
 $background-grey: #fafafa;
-$border: none;//1px solid black;
+$border: 1px solid black;
 $living-color: lightgreen;
 $long-living-color: green;
 $dead-color: lighten(lightblue, 15%);
@@ -17,3 +17,7 @@ $btn-stop-bg: transparentize(#d9534f, $transparency);
 $btn-stop-border: darken($btn-stop-bg, 5%);
 $btn-clear-bg: transparentize(#f0ad4e, $transparency);
 $btn-clear-border: darken($btn-clear-bg, 5%);
+
+//Screensizes
+$phone-screen: 767px; //Max Phone dimension
+$tablet-screen: 1279px; //Max Tablet dimension
