--- a/app/styles/components/_grid.scss
+++ b/app/styles/components/_grid.scss
@@ -1,18 +1,36 @@
 .board {
-  width: 100%;
-  height: 50vh;
+  height: 100%;
   border: $border;
   background: $background-grey;
+  margin-bottom: 0px;
 }
+
 .board-row {
-  float: none;
-  margin: 0 auto;
+  @include for-screen-min(768px) {
+    margin-left: 15px;
+  }
+}
+
+.row {
+  border: $border;
 }
 
 .square {
   border: 1px solid $background-grey;
-  height: 15px;
-  width: 15px;
+  height: 10px;
+  width: 10px;
+  @include for-screen-min(768px) {
+    height: 14px;
+    width: 14px;
+  }
+  @include for-screen-min(992px) {
+    height: 18px;
+    width: 18px;
+  }
+  @include for-screen-min(1200px) {
+    height: 22px;
+    width: 22px;
+  }
   margin: -1px;
   float:left;
   background: $dead-color;
@@ -26,8 +44,4 @@
 .square-alive2 {
   @extend .square;
   background:$long-living-color;
-}
-
-.board-row {
-
 }
