Added status box and tweaked styles

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -9,4 +9,5 @@
 @import "components/grid";
 @import "components/info";
 @import "components/main";
+@import "components/status";
 @import "components/title";
