--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 //Colors
 $grey: #333333;
 $background-grey: #fafafa;
-$border: 1px solid black;
+$border: none;//1px solid black;
 $living-color: lightgreen;
 $long-living-color: green;
 $dead-color: lighten(lightblue, 15%);
